# patient-chart-agent

./: .env.example  .gitignore  README.md  eval_out.json  pyproject.toml
.github/workflows/: quality-gate.yml
apps/api/: main.py
apps/client/: analyze_client.py
apps/worker/: coverage_report.py  debug_imports.py  find_patient_file.py  run_analyze.py  run_ingest.py  run_narrative.py  run_snapshot.py  sanity_check.py  scan_risks.py
artifacts/reports/: Berna338.md  Berna338_llm.md  sample.md  sample_llm.md
docs/: CONVENTIONS.md
eval/: manifest.json  manifest_phase7.json  run_eval.py  sample_selector.py
scripts/: debug_env.py  demo.ps1  dev.ps1  llm_ping.py  quality_gate.py  regen_goldens.py
tests/: contract_invariants.py  filename_rules.py  test_agent_pipeline_phase5.py  test_api_analyze.py  test_api_contract_matrix_phase6.py  test_api_health.py  test_api_root.py  test_cli_analyze_phase5.py  test_cli_contract_matrix_phase6.py  test_client_cli_smoke.py  test_client_path_resolution.py  test_contradiction_agent_phase5.py  test_eval_runner_phase7.py  test_eval_sample_selector.py  test_evidence_enrich.py  test_evidence_enrichment_phase5.py  test_filename_conventions_phase8.py  test_golden_phase6.py  test_llm_dotenv_loader.py  test_llm_http_error.py  test_missing_info_agent_phase5.py  test_normalizer_med_display.py  test_quality_gate_phase9.py  test_result_contract_phase7.py  test_rule_discovery.py  test_schema_result_phase5.py  test_snapshot_cli_smoke.py  test_snapshot_smoke.py  test_timeline_agent_phase5.py  test_verifier_agent_phase5.py
tests/golden/: utils.py  (+2 more)
(+4 files in other folders)
