 [build-system]
 requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"

[project]
name = "patient-chart-agent"
version = "0.1.0"
description = "Patient chart agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=1.10"]

[project.optional-dependencies]
dev = ["fastapi", "httpx", "pytest", "python-dotenv"]

 [tool.setuptools.packages.find]
 where = ["."]
 include = ["packages*"]
 namespaces = true
